samples/bad/bad032.lat
// Using variable declared in while

int main () {
  while(true) {
    int x;
  }

  x = 1;
 return 0 ;
}